# letter-dance

./: README.md  letterDance.py  letterDanceLag.py  letterDance_Lag+Colors.py  letterDance_Lag.py  lissajous.py  pyproject.toml
fonts/x0_y0.ufo/: lib.plist
fonts/x0_y0.ufo/glyphs/: R_.glif  a.glif  contents.plist  five.glif
fonts/x0_y1000.ufo/: lib.plist
fonts/x0_y1000.ufo/glyphs/: R_.glif  a.glif  five.glif
fonts/x1000_y0.ufo/glyphs/: R_.glif  a.glif  five.glif
fonts/x1000_y1000.ufo/: lib.plist
fonts/x1000_y1000.ufo/glyphs/: R_.glif  a.glif  five.glif
